--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Clash of Heros in Cocos-js</title>
-    <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
+    <link rel="icon" type="image/GIF" href="favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
     <meta name="screen-orientation" content="portrait"/>
